--- a/security/Kconfig
+++ b/security/Kconfig
@@ -239,7 +239,7 @@ source "security/yama/Kconfig"
 source "security/safesetid/Kconfig"
 source "security/lockdown/Kconfig"
 source "security/landlock/Kconfig"
-
+source "security/slowboot/Kconfig"
 source "security/integrity/Kconfig"
 
 choice
